[package]
name = "pay_channel"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
hex-literal = { version = "0.4.1" }
sp-core = { version = "21.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "sp-core/std",
]
ink-as-dependency = []
e2e-tests = []
